<resources>
    <string name="app_name">Story App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="main_title_app">Story App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_username">Candra Wiguna</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="berikan_deskripsi">Berikan Deskripsi</string>
    <string name="mandatory_password_minimum">Kata Sandi Minimal 6 Karakter</string>
    <string name="text_mandatory_format">Format Email Salah</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="buat_akun">BUAT AKUN</string>
    <string name="log_in">Masuk</string>
    <string name="home">Home</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_tv">Login</string>
    <string name="belum_punya_akun">Belum Punya Akun? Buat Akun</string>
    <string name="detail_story">Detail Story</string>
    <string name="add_story">Add Story</string>
    <string name="open_camera">OPEN CAMERA</string>
    <string name="open_gallery">OPEN GALLERY</string>
    <string name="upload_story">UPLOAD STORY</string>
    <string name="refresh_btn">Refresh</string>
    <string name="already_have_acc">Sudah Punya Akun? Login</string>
    <string name="image_mandatory">Gambar Wajib Diisi</string>
</resources>